# github-rep

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
00-System/: architecture.md  cost-and-failover.md  guardrails.md  roadmap.md
01-Targets/: current.md
02-Repos/: NousResearch__hermes-agent.md  _TEMPLATE.md
03-Journal/: 2026-06-01.md  2026-06-09.md  2026-06-10.md
04-Playbooks/: quality-gated-pr.md  repo-triage.md  second-brain-dreaming.md
05-Lessons/: always-check-for-existing-pr.md  verify-bug-reproduces-and-locate-real-handler.md
src/github_rep/: __init__.py  analyzer.py  api.py  cli.py
tests/: test_analyzer.py  test_api.py  test_cli.py
