[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-rep"
version = "0.2.1"
description = "Analyze a GitHub profile and get honest, actionable advice for building real reputation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Basil Alshukaili", email = "basilalshukaili@gmail.com" }]
keywords = ["github", "open-source", "developer-tools", "profile", "reputation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "requests>=2.31",
    "rich>=13.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7", "responses>=0.25", "pytest-cov>=4"]

[project.scripts]
github-rep = "github_rep.cli:app"

[project.urls]
Homepage = "https://github.com/basilalshukaili/github-rep"
"Bug Tracker" = "https://github.com/basilalshukaili/github-rep/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
